k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: python-flask-app
spec: {}
status: {}
