k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-flask-app
  namespace: python-flask-app
spec:
  ingressClassName: nginx
  rules:
  - host: "python-flask-app.test.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: python-flask-app
            port:
              number: 80
